# format-conversion

./: CMakeLists.txt  README.md
include/: format_conversion.h  segspec.h
src/: file_tree.cpp  read_hdf5.cpp  sac2hdf5.cpp  spec2hdf5.cpp  test.cpp
